@startuml Carrinho

abstract class BaseController {
    -Validacao validacao
    +__construct() : void
    +realizarAcao(callable acao, array filtros = null) : mixed:  "Executa uma ação específica após validar os dados do POST."
}

class Conexao {
    +__construct(): void:  "Inicia a conexão com o banco de dados utilizando configurações específicas."
}

package "Carrinho" {
    class Carrinho {
        -Conexao conexao
        +__construct() : void : "Inicializa a instância da classe."
        +adicionar(int id_produto) : void : "Adiciona um produto ao carrinho."
        +obterItens() : array : "Retorna os itens do carrinho com seus respectivos preços."
    }

    class CarrinhoController {
        -Carrinho carrinho
        +__construct() : void : "Inicializa a instância da classe."
        +adicionarProduto(int id_produto) : array : "Adiciona um produto ao carrinho."
    }

    BaseController <|-- CarrinhoController
    CarrinhoController --> Carrinho : usa
    Carrinho --> Conexao : usa
}
@enduml